Set up Spring Boot project with PostgreSQL integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo
+
+# Database Config
+spring.datasource.url=jdbc:postgresql://localhost:5432/nba_fantasy
+spring.datasource.username=nba_user
+spring.datasource.password=Lebron123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# JWT Secret Key
+jwt.secret=MySuperSecretKey
