--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 # JWT Secret Key
-jwt.secret=MySuperSecretKey
+jwt.secret=MySuperSecretKeyThatIsSecureEnough123!
